@@ -1,3 +1,8 @@
+2003-06-03  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b9
+
+	* Remove preg_* functions from search.php, in order to support
+	  older versions of PHP.
+
 2003-06-03  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b8
 
 	* Fixed problem in gallery_remote*.php which caused GR to no longer
